--- a/ingress/volume.yaml
+++ b/ingress/volume.yaml
@@ -11,6 +11,6 @@ spec:
   persistentVolumeReclaimPolicy: Retain
 
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   hostPath:
     path: "/persistent-volume"
