--- a/ingress/ms-claim.yaml
+++ b/ingress/ms-claim.yaml
@@ -3,9 +3,8 @@ apiVersion: v1
 metadata:
   name: my-pvc
 spec:
-#  storageClassName: pv-demo
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
