--- a/ingress/ms-d.yaml
+++ b/ingress/ms-d.yaml
@@ -6,6 +6,8 @@ metadata:
     app: ms
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: ms
@@ -38,7 +40,7 @@ kind: Service
 metadata:
   name: ms-ser
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: ms
   ports:
