to docker-compose

--- a/infra/ms.yml
+++ b/infra/ms.yml
@@ -7,7 +7,7 @@ services:
     volumes:
     - msVol:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
 #    ports:
 #    - 3306:3306
 volumes:
