--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -26,7 +26,7 @@ jobs:
         uses: garygrossgarten/github-action-scp@release
         with:
           local: infra
-          remote: kuber/infra
+          remote: /kuber/infra
           host: ${{ secrets.DC_HOST }}
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
