--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -30,3 +30,12 @@ jobs:
           host: ${{ secrets.DC_HOST }}
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
+      - name: Deploy
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.DC_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: 22
+          script: |
+            docker-compose -f /kuber/infra/ms.yml -f /kuber/infra/pma.yml up -d
