to docker-compose

--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -38,4 +38,5 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
           script: |
+            docker-compose -f /kuber/infra/ms.yml -f /kuber/infra/pma.yml down --remove-orphans
             docker-compose -f /kuber/infra/ms.yml -f /kuber/infra/pma.yml up -d
