--- a/infra/ms.yml
+++ b/infra/ms.yml
@@ -8,7 +8,7 @@ services:
     - msVol:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-#    ports:
-#    - 3306:3306
 volumes:
   msVol:
+#networks:
+#  d_net:
