--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -1,41 +1,34 @@
-# This is a basic workflow to help you get started with Actions
 name: Infra CI
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+        with:
+          repository: Logotipiwe/dc_vars
+      - name: load-env
+        uses: duskmoon314/action-load-env@v1.1.0
 
-      # Runs a set of commands using the runners shell
+      - uses: actions/checkout@v3
+
       - name: Upload
         uses: garygrossgarten/github-action-scp@release
         with:
           local: infra
           remote: /kuber/infra
-          host: ${{ secrets.DC_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          host: ${{ DC_HOST }}
+          username: ${{ SSH_USER }}
+          password: ${{ SSH_PASSWORD }}
       - name: Deploy
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.DC_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          host: ${{ DC_HOST }}
+          username: ${{ SSH_USER }}
+          password: ${{ SSH_PASSWORD }}
           port: 22
           script: |
             cd /kuber/infra/
