--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: git@github.com:Logotipiwe/dc_vars.git
+          token: ${{ secrets.PAT }}
       - name: load-env
         uses: duskmoon314/action-load-env@v1.1.0
 
