--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -12,7 +12,7 @@ jobs:
           echo ${{ secrets.PAT }}
       - uses: actions/checkout@v3
         with:
-          repository: git@github.com:Logotipiwe/dc_vars.git
+          repository: Logotipiwe/dc_vars
           token: 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
       - name: load-env
         uses: duskmoon314/action-load-env@v1.1.0
