--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: Logotipiwe/dc_vars
-          token: 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
+          token: ${{secrets.PAT}}
       - name: load-env
         uses: duskmoon314/action-load-env@v1.1.0
 
