--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           local: infra
           remote: /kuber/infra
-          host: ${{DC_HOST}}
+          host: ${{env.DC_HOST}}
           username: ${SSH_USER}
           password: ${SSH_PASSWORD}
       - name: Deploy
