--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -26,6 +26,11 @@ http {
             proxy_pass $KB_BACK_SER;
         }
 
+        location ^~ /keepbalancevk/ {
+            set $KB_FRONT_SER http://kb_front:80;
+            proxy_pass $KB_FRONT_SER;
+        }
+
         #location / {
             #root /var/www/html;
         #    proxy_pass http://php7-4;
