add index front

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -21,6 +21,11 @@ http {
         #    return 302 /node/;
         #}
 
+        location / {
+            set $SER http://index_front:80;
+            proxy_pass $SER;
+        }
+
         location ^~ /kb_back_service {
             set $KB_BACK_SER http://kb_back:80;
             proxy_pass $KB_BACK_SER;
