secret port for pma

--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -34,4 +34,7 @@ jobs:
           script: |
             cd /kuber/infra/
             docker-compose $(ls *.yml|sed "s/^/-f /g"|xargs) down --remove-orphans
-            docker-compose $(ls *.yml|sed "s/^/-f /g"|xargs) up -d
+#            docker-compose $(ls *.yml|sed "s/^/-f /g"|xargs) up -d
+            docker-compose -f ingress.yml up -d
+            docker-compose -f ms.yml up -d
+            docker-compose -f pma.yml up -d
