--- a/.github/workflows/Infra_CI.yml
+++ b/.github/workflows/Infra_CI.yml
@@ -32,6 +32,7 @@ jobs:
           password: ${{env.SSH_PASSWORD}}
           port: 22
           script: |
+            export MYSQL_ROOT_PASSWORD=${{env.MYSQL_ROOT_PASSWORD}}
             cd /kuber/infra/
             docker-compose $(ls *.yml|sed "s/^/-f /g"|xargs) down --remove-orphans
             docker-compose -f ingress.yml up -d
