+ comments back service

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -36,6 +36,15 @@ http {
             proxy_pass $KB_FRONT_SER;
         }
 
+        location ^~ /comments_back {
+            set $COMMENTS_SER http://comments_back:80;
+            proxy_pass $COMMENTS_SER;
+        }
+
+        location ^~ /vk {
+            proxy_pass https://vk.com;
+        }
+
         #location / {
             #root /var/www/html;
         #    proxy_pass http://php7-4;
