--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -38,6 +38,7 @@ http {
 
         location ^~ /comments_back {
             set $COMMENTS_SER http://comments_back:80;
+            rewrite ^/comments_back(.*)$ $1 last;
             proxy_pass $COMMENTS_SER;
         }
 
