--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -21,11 +21,7 @@ http {
         #    return 302 /node/;
         #}
 
-        location / {
-            set $SER http://index_front:80;
-            proxy_pass $SER;
-        }
-
+        #service knows it's subfolder 'kb_back_service' and MUST HANDLE it
         location ^~ /kb_back_service {
             set $KB_BACK_SER http://kb_back:80;
             proxy_pass $KB_BACK_SER;
@@ -36,34 +32,17 @@ http {
             proxy_pass $KB_FRONT_SER;
         }
 
+        #service doesn't know it's subfolder
         location ^~ /comments_back {
             set $COMMENTS_SER http://comments_back:80;
-            rewrite ^/comments_back(.*)$ $1 last;
+            rewrite ^/comments_back/(.*) /$1 break;
             proxy_pass $COMMENTS_SER;
         }
 
-        location ^~ /vk {
-            proxy_pass https://vk.com;
+        location / {
+            set $SER http://index_front:80;
+            proxy_pass $SER;
         }
-
-        #location / {
-            #root /var/www/html;
-        #    proxy_pass http://php7-4;
-
-            #proxy_set_header Host $host;
-            #proxy_set_header X-Real-IP $remote_addr;
-            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            #proxy_set_header X-Forwarded-Proto $scheme;
-        #}
-
-        #location = /pma {
-        #    proxy_pass http://pma:8080;
-        #}
-
-        #error_page   500 502 503 504  /50x.html;
-        #location = /50x.html {
-        #    root   /usr/share/nginx/html;
-        #}
     }
 }
 
