--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -39,6 +39,12 @@ http {
             proxy_pass $COMMENTS_SER;
         }
 
+        location ^~ /config_server {
+            set $CONFIG_SER http://config_server:80;
+            rewrite ^/config_server/(.*) /$1 break;
+            proxy_pass $CONFIG_SER;
+        }
+
         location / {
             set $SER http://index_front:80;
             proxy_pass $SER;
