--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
 
         location ^~ /config_server {
             set $CONFIG_SER http://config_server:80;
-            rewrite ^/config_server/(.*) /$1 break;
+            rewrite ^/config_server(.*) $1 break;
             proxy_pass $CONFIG_SER;
         }
 
