handling redirects from upstream services

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -2,6 +2,8 @@ events {
 
 }
 
+error_log /var/log/nginx/access.log debug;
+
 http {
     server {
         listen       80;
@@ -35,19 +37,26 @@ http {
         #service doesn't know it's subfolder
         location ^~ /comments_back {
             set $COMMENTS_SER http://comments_back:80;
-            rewrite ^/comments_back/(.*) /$1 break;
+            rewrite ^comments_back(.*) /$1 break;
             proxy_pass $COMMENTS_SER;
         }
 
         location ^~ /config_server {
             set $CONFIG_SER http://config_server:80;
-            rewrite ^/config_server(.*) $1 break;
+            rewrite ^config_server(.*) /$1 break;
             proxy_pass $CONFIG_SER;
         }
 
         location / {
             set $SER http://index_front:80;
             proxy_pass $SER;
+            proxy_intercept_errors on;
+            error_page 301 302 307 = @handle_redirect;
+        }
+
+        location @handle_redirect {
+            set $saved_redirect_location '$upstream_http_location';
+            proxy_pass $saved_redirect_location;
         }
     }
 }
