--- a/infra/ingress.yml
+++ b/infra/ingress.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   ingress:
     image: nginx
+    container_name: ingress
     restart: always
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
