handling redirects from upstream services

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -2,7 +2,7 @@ events {
 
 }
 
-error_log /var/log/nginx/access.log debug;
+#error_log /var/log/nginx/access.log debug;
 
 http {
     server {
@@ -50,13 +50,7 @@ http {
         location / {
             set $SER http://index_front:80;
             proxy_pass $SER;
-            proxy_intercept_errors on;
-            error_page 301 302 307 = @handle_redirect;
-        }
-
-        location @handle_redirect {
-            set $saved_redirect_location '$upstream_http_location';
-            proxy_pass $saved_redirect_location;
+            proxy_set_header HOST $host;
         }
     }
 }
