handling redirects from upstream services

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -37,14 +37,16 @@ http {
         #service doesn't know it's subfolder
         location ^~ /comments_back {
             set $COMMENTS_SER http://comments_back:80;
-            rewrite ^comments_back(.*) /$1 break;
+            rewrite ^/comments_back/(.*) /$1 break;
+            rewrite ^/comments_back(.*) /$1 break;
             proxy_pass $COMMENTS_SER;
         }
 
         location ^~ /config_server {
-            set $CONFIG_SER http://config_server:80;
-            rewrite ^config_server(.*) /$1 break;
-            proxy_pass $CONFIG_SER;
+            set $SER_URL http://config_server:80;
+            rewrite ^/config_server/(.*) /$1 break;
+            rewrite ^/config_server(.*) /$1 break;
+            proxy_pass $SER_URL;
         }
 
         location / {
