--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -2,7 +2,7 @@ events {
 
 }
 
-#error_log /var/log/nginx/access.log debug;
+error_log /var/log/nginx/access.log debug;
 
 http {
     server {
@@ -42,10 +42,29 @@ http {
             proxy_pass $COMMENTS_SER;
         }
 
+#       CONFIG SERVER
         location ^~ /config_server {
             set $SER_URL http://config_server:80;
+            rewrite ^([^(.)]*[^/])$ $1/ permanent;
+            rewrite ^/config_server(.*)$ $1 break;
+
+            proxy_pass $SER_URL;
+        }
+
+        location ^~ /config_server/api {
+            set $SER_URL http://config_server:80;
             rewrite ^/config_server/(.*) /$1 break;
-            rewrite ^/config_server(.*) /$1 break;
+            rewrite ^/config_server(.*)$ $1 break;
+
+            proxy_pass $SER_URL;
+        }
+#       END CONFIG SERVER
+
+        location ^~ /oauth2 {
+            set $SER_URL http://idp:80;
+            rewrite ^/oauth2/(.*) /$1 break;
+            rewrite ^/oauth2(.*)$ $1 break;
+
             proxy_pass $SER_URL;
         }
 
