path for pixel battle

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -68,6 +68,24 @@ http {
             proxy_pass $SER_URL;
         }
 
+        location ^~ /pixel-battle-back {
+            set $SER_URL http://pixel_battle_back:80;
+            rewrite ^/pixel-battle-back/(.*) /$1 break;
+            rewrite ^/pixel-battle-back(.*)$ $1 break;
+
+            proxy_pass $SER_URL;
+        }
+
+        location ^~ /pixel-battle {
+            set $SER_URL http://pixel_battle_front:80;
+            rewrite ^/pixel-battle$ / break;
+            rewrite ^/pixel-battle/(.*) /$1 break;
+            rewrite ^/pixel-battle(.*)$ $1 break;
+
+            proxy_pass $SER_URL;
+            proxy_set_header HOST $host;
+        }
+
         location / {
             set $SER http://index_front:80;
             proxy_pass $SER;
