--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -27,11 +27,13 @@ http {
         location ^~ /kb_back_service {
             set $KB_BACK_SER http://kb_back:80;
             proxy_pass $KB_BACK_SER;
+            proxy_set_header HOST $host;
         }
 
         location ^~ /keepbalancevk/ {
             set $KB_FRONT_SER http://kb_front:80;
             proxy_pass $KB_FRONT_SER;
+            proxy_set_header HOST $host;
         }
 
         #service doesn't know it's subfolder
@@ -40,6 +42,7 @@ http {
             rewrite ^/comments_back/(.*) /$1 break;
             rewrite ^/comments_back(.*) /$1 break;
             proxy_pass $COMMENTS_SER;
+            proxy_set_header HOST $host;
         }
 
 #       CONFIG SERVER
@@ -49,6 +52,7 @@ http {
             rewrite ^/config_server(.*)$ $1 break;
 
             proxy_pass $SER_URL;
+            proxy_set_header HOST $host;
         }
 
         location ^~ /config_server/api {
@@ -57,6 +61,7 @@ http {
             rewrite ^/config_server(.*)$ $1 break;
 
             proxy_pass $SER_URL;
+            proxy_set_header HOST $host;
         }
 #       END CONFIG SERVER
 
@@ -66,6 +71,7 @@ http {
             rewrite ^/oauth2(.*)$ $1 break;
 
             proxy_pass $SER_URL;
+            proxy_set_header HOST $host;
         }
 
         location ^~ /pixel-battle-back {
@@ -74,6 +80,7 @@ http {
             rewrite ^/pixel-battle-back(.*)$ $1 break;
 
             proxy_pass $SER_URL;
+            proxy_set_header HOST $host;
         }
 
         location ^~ /pixel-battle {
