test support webSocket

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -83,6 +83,18 @@ http {
             proxy_set_header HOST $host;
         }
 
+        location ^~ /pixel-battle-back/api/socket {
+            set $SER_URL http://pixel_battle_back:80;
+            rewrite ^/pixel-battle-back/(.*) /$1 break;
+            rewrite ^/pixel-battle-back(.*)$ $1 break;
+
+            proxy_pass $SER_URL;
+            proxy_set_header HOST $host;
+            proxy_http_version 1.1;
+           proxy_set_header Upgrade $http_upgrade;
+           proxy_set_header Connection "upgrade";
+        }
+
         location ^~ /pixel-battle {
             set $SER_URL http://pixel_battle_front:80;
             rewrite ^/pixel-battle$ / break;
