+ points-service api

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -91,8 +91,8 @@ http {
             proxy_pass $SER_URL;
             proxy_set_header HOST $host;
             proxy_http_version 1.1;
-           proxy_set_header Upgrade $http_upgrade;
-           proxy_set_header Connection "upgrade";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
 
         location ^~ /pixel-battle {
@@ -102,6 +102,14 @@ http {
             rewrite ^/pixel-battle(.*)$ $1 break;
 
             proxy_pass $SER_URL;
+            proxy_set_header HOST $host;
+        }
+
+        location ^~ /points-service {
+            set $POINTS_SER http://points-service:80;
+            rewrite ^/points-service/(.*) /$1 break;
+            rewrite ^/points-service(.*) /$1 break;
+            proxy_pass $POINTS_SER;
             proxy_set_header HOST $host;
         }
 
