--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -106,7 +106,7 @@ http {
         }
 
         location ^~ /points-service {
-            set $POINTS_SER http://points-service:80;
+            set $POINTS_SER http://points_service:80;
             rewrite ^/points-service/(.*) /$1 break;
             rewrite ^/points-service(.*) /$1 break;
             proxy_pass $POINTS_SER;
