--- a/.github/workflows/ClusterUp.yml
+++ b/.github/workflows/ClusterUp.yml
@@ -11,4 +11,6 @@ jobs:
         run: echo "step 0!"
   job1:
     uses: logotipiwe/dc_points_service/.github/workflows/deploy.yml@dev
+    secrets: inherit
+
 
