--- a/.github/workflows/ClusterUp.yml
+++ b/.github/workflows/ClusterUp.yml
@@ -1,16 +1,33 @@
 name: Cluster Up
 on:
-  push:
-    branches: [ "dev" ]
+#  push:
+#    branches: [ "dev" ]
   workflow_dispatch:
 jobs:
-  job0:
-    runs-on: ubuntu-latest
-    steps:
-      - id: step0
-        run: echo "step 0!"
-  job1:
+  deploy-infra:
+    uses: ./.github/workflows/deploy.yml@main
+    secrets: inherit
+  deploy-points-service:
     uses: logotipiwe/dc_points_service/.github/workflows/deploy.yml@main
     secrets: inherit
-
-
+  deploy-config-server:
+    uses: logotipiwe/dc_config_server/.github/workflows/cd.yml@main
+    secrets: inherit
+  deploy-index-front:
+    uses: logotipiwe/dc_index_front/.github/workflows/cd.yml@main
+    secrets: inherit
+  deploy-comments-back:
+    uses: logotipiwe/dc_comments_back/.github/workflows/cd.yml@main
+    secrets: inherit
+  deploy-kb-front:
+    uses: logotipiwe/dc_kb_front/.github/workflows/front_CD.yml@main
+    secrets: inherit
+  deploy-kb-back:
+    uses: logotipiwe/dc_kb_back/.github/workflows/kb_back_CI.yml@main
+    secrets: inherit
+  deploy-pixel-battle-front:
+    uses: logotipiwe/dc_pixel_battle_front/.github/workflows/cd.yml@main
+    secrets: inherit
+  deploy-pixel-battle-back:
+    uses: logotipiwe/dc_pixel_battle_back/.github/workflows/cd.yml@main
+    secrets: inherit
