--- a/.github/workflows/ClusterUp.yml
+++ b/.github/workflows/ClusterUp.yml
@@ -5,10 +5,10 @@ on:
   workflow_dispatch:
 jobs:
   deploy-infra:
-    uses: ./.github/workflows/Infra_CI.yml
+    uses: ./.github/workflows/cd.yml
     secrets: inherit
   deploy-points-service:
-    uses: logotipiwe/dc_points_service/.github/workflows/deploy.yml@main
+    uses: logotipiwe/dc_points_service/.github/workflows/cd.yml@main
     secrets: inherit
   deploy-config-server:
     uses: logotipiwe/dc_config_server/.github/workflows/cd.yml@main
@@ -20,10 +20,10 @@ jobs:
     uses: logotipiwe/dc_comments_back/.github/workflows/cd.yml@main
     secrets: inherit
   deploy-kb-front:
-    uses: logotipiwe/dc_kb_front/.github/workflows/front_CD.yml@main
+    uses: logotipiwe/dc_kb_front/.github/workflows/cd.yml@main
     secrets: inherit
   deploy-kb-back:
-    uses: logotipiwe/dc_kb_back/.github/workflows/kb_back_CI.yml@main
+    uses: logotipiwe/dc_kb_back/.github/workflows/cd.yml@main
     secrets: inherit
   deploy-pixel-battle-front:
     uses: logotipiwe/dc_pixel_battle_front/.github/workflows/cd.yml@main
