--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,7 +15,11 @@ jobs:
       - name: load-env
         uses: duskmoon314/action-load-env@v1.1.0
 
-      - uses: actions/checkout@v3
+      - name: Checkout project
+        uses: actions/checkout@v3
+        with:
+          repository: Logotipiwe/dc_infrastructure
+          token: ${{secrets.PAT}}
 
       - name: Upload
         uses: garygrossgarten/github-action-scp@release
