--- a/.github/workflows/unified-build.yml
+++ b/.github/workflows/unified-build.yml
@@ -5,18 +5,33 @@ on:
       repoName:
         type: string
         required: true
+    secrets:
+      sec:
+        required: true
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: echoo
-        run: echo ${{inputs.repoName}}
+      - name: echo repo sec
+        run: echo ${{secrets.PAT}}
 
+      - name: echo provided sec
+        run: echo ${{secrets.sec}}
+
+#      - uses: actions/checkout@v3
+#        with:
+#          repository: Logotipiwe/dc_vars
+#          token: ${{secrets.PAT}}
+#      - name: load-env
+#        uses: duskmoon314/action-load-env@v1.1.0
+#
 #      - name: Checkout project
 #        uses: actions/checkout@v3
 #        with:
 #          repository: Logotipiwe/dc_infrastructure
 #          token: ${{secrets.PAT}}
+
+
 #
 #      - name: Upload
 #        uses: garygrossgarten/github-action-scp@release
