--- a/.github/workflows/unified-deploy-call.yml
+++ b/.github/workflows/unified-deploy-call.yml
@@ -10,7 +10,7 @@ jobs:
       with:
         repoName: dc_points_service
       secrets:
-        pat: SECREEET!
+        pat: ${{secrets.PAT}}
 
 #      - name: Checkout project
 #        uses: actions/checkout@v3
