--- a/.github/workflows/unified-deploy-call.yml
+++ b/.github/workflows/unified-deploy-call.yml
@@ -9,8 +9,11 @@ jobs:
       uses: ./.github/workflows/unified-build.yml
       with:
         repoName: dc_points_service
+        dockerUser: ${{env.DOCKER_USER}}
+        dockerImageName: points-service
       secrets:
         pat: ${{secrets.PAT}}
+        dockerPat: ${{secrets.DOCKER_PAT}}
 
 #      - name: Checkout project
 #        uses: actions/checkout@v3
