try unified cd files

--- a/.github/workflows/unified-deploy-call.yml
+++ b/.github/workflows/unified-deploy-call.yml
@@ -9,7 +9,7 @@ jobs:
       uses: ./.github/workflows/unified-build.yml
       with:
         repoName: dc_points_service
-        dockerUser: ${{env.DOCKER_USER}}
+        dockerUser: ${{vars.DOCKER_USER}}
         dockerImageName: points-service
       secrets:
         pat: ${{secrets.PAT}}
