--- a/.github/workflows/unified-build.yml
+++ b/.github/workflows/unified-build.yml
@@ -29,12 +29,20 @@ jobs:
           repository: Logotipiwe/${{inputs.repoName}}
           token: ${{secrets.pat}}
 
-      - name: Build
+      - name: Build with timestamp
         id: build_with_timestamp
         run: |
           ls
           export IMAGE=${{inputs.dockerUser}}/${{inputs.dockerImageName}}:$(date +%s)
           docker build ${{inputs.dockerfilePath}} -t ${IMAGE}
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ inputs.dockerUser }}
+          password: ${{ secrets.dockerPat }}
+      - name: Push to docker reg
+        run: |
           docker push ${IMAGE}
           echo "IMAGE=${IMAGE}" >> "$GITHUB_ENV"
           echo Image is ${IMAGE}
