--- a/.github/workflows/unified-build.yml
+++ b/.github/workflows/unified-build.yml
@@ -35,6 +35,7 @@ jobs:
           ls
           export IMAGE=${{inputs.dockerUser}}/${{inputs.dockerImageName}}:$(date +%s)
           docker build ${{inputs.dockerfilePath}} -t ${IMAGE}
+          echo "IMAGE=${IMAGE}" >> "$GITHUB_ENV"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -43,6 +44,5 @@ jobs:
           password: ${{ secrets.dockerPat }}
       - name: Push to docker reg
         run: |
-          docker push ${IMAGE}
-          echo "IMAGE=${IMAGE}" >> "$GITHUB_ENV"
-          echo Image is ${IMAGE}
+          docker push ${{env.IMAGE}}
+          echo Image is ${{env.IMAGE}}
