--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -113,6 +113,14 @@ http {
             proxy_set_header HOST $host;
         }
 
+        location ^~ /haur {
+            set $SER http://haur:80;
+            rewrite ^/haur/(.*) /$1 break;
+            rewrite ^/haur(.*) /$1 break;
+            proxy_pass $SER;
+            proxy_set_header HOST $host;
+        }
+
         location / {
             set $SER http://index_front:80;
             proxy_pass $SER;
