--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,14 @@ jobs:
         with:
           repository: Logotipiwe/dc_infrastructure
           token: ${{secrets.PAT}}
-
+      - name: Set SSL cert
+        run: |
+          ls
+          cp dc-vars-data/ssl/* nginx/ssl
+          cd nginx/ssl
+          ls
+          cat logotipiwe.ru.crt
+          cd /kuber/infra/
       - name: Upload
         uses: garygrossgarten/github-action-scp@release
         with:
@@ -43,13 +50,6 @@ jobs:
             export PGADMIN_USER=${{env.PGADMIN_USER}}
             export PGADMIN_PASSWORD=${{env.PGADMIN_PASSWORD}}
             cd /kuber/infra/
-            
-            cp dc-vars-data/ssl/* nginx/ssl
-            cd nginx/ssl
-            ls
-            cat logotipiwe.ru.crt
-            cd /kuber/infra/
-            
             
             docker-compose $(ls *.yml|sed "s/^/-f /g"|xargs) down --remove-orphans
             docker-compose -f ingress.yml up -d
