--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
           token: ${{secrets.PAT}}
       - name: Set SSL cert
         run: |
-          cp /tmp/deploy/ssl/* nginx/ssl
+          cp /tmp/deploy/ssl/* nginx/ssl/
           cd nginx/ssl
           ls
           cat logotipiwe.ru.crt
