--- a/infra/ingress.yml
+++ b/infra/ingress.yml
@@ -6,8 +6,10 @@ services:
     restart: always
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
     ports:
     - 80:80
+    - 443:443
     command: [ nginx-debug, '-g', 'daemon off;' ]
     networks:
       - dc-net
