--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -12,10 +12,10 @@ http {
 
         resolver 127.0.0.11 valid=30s ipv6=off;
 
-        #listen 443 ssl http2;
-        #server_name www.logotipiwe.ru;
-        #ssl_certificate /etc/ssl/nginx_certs/logotipiwe.ru.crt;
-        #ssl_certificate_key /etc/ssl/nginx_certs/private.key;
+        listen 443 ssl http2;
+        server_name logotipiwe.ru;
+        ssl_certificate /etc/nginx/ssl/logotipiwe.ru.crt;
+        ssl_certificate_key /etc/nginx/ssl/logotipiwe.ru.key;
 
         #ssl_trusted_certificate /etc/ssl/nginx_certs/chain.crt;
 
