--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
           token: ${{secrets.PAT}}
       - name: Set SSL cert
         run: |
-          cp /tmp/deploy/ssl/* ./infra/nginx/ssl
+          cp /tmp/deploy/ssl-temp/* ./infra/nginx/ssl
       - name: Upload
         uses: garygrossgarten/github-action-scp@release
         with:
