--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -121,6 +121,12 @@ http {
             proxy_set_header HOST $host;
         }
 
+        location ^~ /ima {
+            set $SER http://ima:8080;
+            proxy_pass $SER;
+            proxy_set_header HOST $host;
+        }
+
         location / {
             set $SER http://index_front:80;
             proxy_pass $SER;
