--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -125,9 +125,13 @@ http {
             set $SER http://ima:8080;
             proxy_pass $SER;
             proxy_set_header HOST $host;
+            proxy_hide_header Access-Control-Allow-Origin;
             add_header Access-Control-Allow-Origin http://localhost:5173;
+            proxy_hide_header Access-Control-Request-Headers;
             add_header Access-Control-Request-Headers "Origin, X-Api-Key, X-Requested-With, Content-Type, Accept, Authorization";
+            proxy_hide_header Access-Control-Allow-Credentials;
             add_header Access-Control-Allow-Credentials true;
+            proxy_hide_header Access-Control-Allow-Methods;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, HEAD";
         }
 
