--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -128,7 +128,7 @@ http {
             proxy_hide_header Access-Control-Allow-Origin;
             add_header Access-Control-Allow-Origin http://localhost:5173;
             proxy_hide_header Access-Control-Request-Headers;
-            add_header Access-Control-Request-Headers "Origin, X-Api-Key, X-Requested-With, Content-Type, Accept, Authorization";
+            add_header Access-Control-Request-Headers "Origin, content-type, X-Api-Key, X-Requested-With, Content-Type, Accept, Authorization";
             proxy_hide_header Access-Control-Allow-Credentials;
             add_header Access-Control-Allow-Credentials true;
             proxy_hide_header Access-Control-Allow-Methods;
