--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -126,13 +126,13 @@ http {
             proxy_pass $SER;
             proxy_set_header HOST $host;
             proxy_hide_header Access-Control-Allow-Origin;
-            add_header Access-Control-Allow-Origin http://localhost:5173;
+            add_header Access-Control-Allow-Origin http://localhost:5173 always;
             proxy_hide_header Access-Control-Request-Headers;
-            add_header Access-Control-Request-Headers "Origin, content-type, X-Api-Key, X-Requested-With, Content-Type, Accept, Authorization";
+            add_header Access-Control-Request-Headers "Origin, content-type, X-Api-Key, X-Requested-With, Content-Type, Accept, Authorization" always;
             proxy_hide_header Access-Control-Allow-Credentials;
-            add_header Access-Control-Allow-Credentials true;
+            add_header Access-Control-Allow-Credentials true always;
             proxy_hide_header Access-Control-Allow-Methods;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, HEAD";
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, HEAD" always;
         }
 
         location / {
