--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -129,6 +129,8 @@ http {
             add_header Access-Control-Allow-Origin http://localhost:5173 always;
             proxy_hide_header Access-Control-Request-Headers;
             add_header Access-Control-Request-Headers "Origin, content-type, X-Api-Key, X-Requested-With, Content-Type, Accept, Authorization" always;
+            proxy_hide_header Access-Control-Allow-Headers;
+            add_header Access-Control-Allow-Headers "Origin, content-type, X-Api-Key, X-Requested-With, Content-Type, Accept, Authorization" always;
             proxy_hide_header Access-Control-Allow-Credentials;
             add_header Access-Control-Allow-Credentials true always;
             proxy_hide_header Access-Control-Allow-Methods;
