--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,3 +56,4 @@ jobs:
             docker-compose -f portainer.yml up -d
             docker-compose -f pg.yml up -d
             docker-compose -f pgadmin.yml up -d
+            docker-compose -f jenkins.yml up -d
