return signed cert

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -14,8 +14,8 @@ http {
 
         listen 443 ssl http2;
         server_name logotipiwe.ru;
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_certificate /etc/nginx/ssl/logotipiwe.ru.crt;
+        ssl_certificate_key /etc/nginx/ssl/logotipiwe.ru.key;
 
         #ssl_trusted_certificate /etc/ssl/nginx_certs/chain.crt;
 
