--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Copy SSL cert
         run: |
           mkdir /tmp/deploy
-          cp dc-vars-data/ssl-temp /tmp/deploy -r
+          cp dc-vars-data/ssl /tmp/deploy -r
       - name: Checkout project
         uses: actions/checkout@v3
         with:
@@ -25,7 +25,7 @@ jobs:
           token: ${{secrets.PAT}}
       - name: Set SSL cert
         run: |
-          cp /tmp/deploy/ssl-temp/* ./infra/nginx/ssl
+          cp /tmp/deploy/ssl/* ./infra/nginx/ssl
       - name: Upload
         uses: garygrossgarten/github-action-scp@release
         with:
